--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
 <body>
 <h1 id="hhead" align="center">Order Book</h1>
 <div id="orderbook"></div>
-<script src="./js/index.min.js"></script>
+<script src="./index.min.js"></script>
 </body>
 </html>
