+ style from bootstrap

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>OMS-Ranjith</title>
 </head>
 <body>
-<h1 id="hhead" align="center">Order Book</h1>
+<h1 id="head" align="center">Order Book</h1>
 <div id="orderbook"></div>
 <script src="./index.min.js"></script>
 </body>
